--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-3">
-        <a class="btn btn-primary btn-lg px-5 mb-2" href="{{ "docs/menu" | relURL }}" role="button">Article</a>
+        <a class="btn btn-primary btn-lg px-5 mb-2" href="{{ "docs" | relURL }}" role="button">Article</a>
       </div>
       <div class="col-lg-3">
         <a class="btn btn-primary btn-lg px-5 mb-2" href="https://nyaannyaan.github.io/library/" role="button">Library</a>
